--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -1,3 +1,135 @@
-import Header from './components/header.jsx';
+<div id='layout' className='two-column-text'>
+ ## 🧑‍💻 About Me
 
-<Header />
+A highly experienced Full Stack Engineer with a strong foundation in React, .NET Core, and cloud technologies.  Proven ability to lead projects and teams, coupled with a commitment to building scalable and high-quality software solutions.  I leverage a Product Engineering Manifesto approach, emphasizing quality and client collaboration.
+
+---
+
+## 🧠 Technical Skill Set
+
+### Programming Languages
+
+C#, TypeScript, SQL, Python
+
+### Frontend Frameworks / Tools
+
+React, Next.js, Redux, Zustand, TailwindCSS
+
+### Backend Frameworks / Tools
+
+.NET Core, EFCore, Dapper, FastAPI
+
+### Cloud Platforms
+
+Azure
+
+### Other Skills
+
+REST API Design & Development, Unit Testing (NUnit), CI/CD Pipelines, MS SQL Server
+
+---
+
+## 💼 Work Experience
+
+### **Senior Software Engineer** — Nagarro, Sri Lanka
+
+📅 *Dec 2023 – Present*
+
+* Led the modernization of SPAs from legacy technologies (Knockout.js) to modern React.js frameworks, driving improved performance and maintainability.
+* Migrated legacy ASP.NET Core applications to microservices architecture on .NET 8+, focusing on scalability and resilience.
+* Provisioned Azure infrastructure using Terraform and implemented CI/CD pipelines with GitHub Actions + Azure DevOps, ensuring automated deployments.
+* Contributed to the development of WiX/MSI installers for desktop/server environments.
+* Actively participated in code reviews, documentation, and team knowledge sharing, promoting best practices.
+
+---
+
+### **Software Engineer** — Zone24x7, Sri Lanka
+
+📅 *Feb 2020 – Dec 2023*
+
+* Developed a custom ETL system using Hangfire and SignalR for real-time data feedback, demonstrating experience with scalable communication architectures.
+* Led the migration of an Angular application to the latest version, applying strong technical leadership and resolving compatibility issues.
+* Designed and implemented a Postman test suite, automating testing and significantly reducing QA hours.
+* Implemented a RabbitMQ-based communication system alongside an HTTP sync tool, showcasing experience with asynchronous messaging.
+* Utilized Webpack and Terser to optimize JavaScript assets, achieving a 50% size reduction – highlighting optimization skills.
+* Mentored junior developers and interns, fostering a collaborative and growth-oriented team environment.
+ 
+ ### **Freelance Software Engineer** — Self-employed
+
+📅 *Jan 2018 – Feb 2020*
+
+* Developed tools for 2D/3D content creation in Python and MEL, using advanced technologies.
+* Created After Effects plugins utilizing ActionScript, showcasing adaptability and diverse skills.
+* Developed particle simulations for motion graphics, reflecting problem-solving skills and technical expertise.
+
+---
+
+## 🎓 Education
+
+### Kingston University London – B.Sc (Hons) in Computer Science
+
+*Graduated with 2nd Class Honours*
+
+### Sri Lanka Technological Campus – Software Engineering Bootcamp
+
+*SLASSCOM-backed 6-month intensive training on SWE, OOP, and React.js*
+
+### Colombo South International College – Edexcel A/Ls
+
+**Grades**: B in Mathematics, Physics, Chemistry
+
+---
+
+## 🔧 Personal Projects
+
+### [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter)
+
+A reusable ASP.NET Core middleware filter that short-circuits malicious requests using regex.
+🔗 [NuGet Package](https://www.nuget.org/packages/Zone24x7.PayloadInjectionFilter/)
+
+---
+
+### [LearnTree AI](https://learntree.ai)
+
+A closed-source generative AI app that builds interactive, human-readable knowledge graphs.
+Used for: academic research, market analysis, visual knowledge exploration.
+*Repository access available on request.*
+
+---
+
+## 📚 Continuous Education
+
+* **Microsoft Certified: Azure Fundamentals (AZ-900)**
+  via Pearson — [Badge](https://www.credly.com/badges/d7185838-3573-4ab5-9d91-f07ceb0c5138)
+
+* **Linear Algebra for Machine Learning**
+  by DeepLearning.AI — [Certificate](https://coursera.org/verify/7L3ZXEUHVWWT)
+
+* **Cryptography & Information Theory**
+  by University of Colorado — [Certificate](https://www.coursera.org/account/accomplishments/certificate/BF36UYWDTW8A)
+
+* **Introduction to CS using Python (6.00.1x)**
+  by MITx — [Certificate](https://courses.edx.org/certificates/5bec5895ee594edf9ff6043ec21e68ca)
+
+---
+
+## 👥 References
+
+**Azmeer Mohammed**
+Head, Department of Multimedia (SLTC)
+📧 [azmeerm@gmail.com](mailto:azmeerm@gmail.com)
+📞 +94 77 734 8691
+
+---
+
+**Chathuranga Wijeratna**
+Director of Technology (Nagarro)
+📧 [cwijeratna@yahoo.com](mailto:cwijeratna@yahoo.com)
+
+---
+
+**Chathuranganie Pathirage**
+Associate Software Architect (Zone24x7)
+📧 [chathu03j@yahoo.com](mailto:chathu03j@yahoo.com)
+📞 +94 77 906 9494
+ </div>
