--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -1,11 +1,11 @@
-<div id='layout' className='two-column-text'>
- ## 🧑‍💻 About Me
+<div className='two-column-text'>
+ ## About Me
 
 A highly experienced Full Stack Engineer with a strong foundation in React, .NET Core, and cloud technologies.  Proven ability to lead projects and teams, coupled with a commitment to building scalable and high-quality software solutions.  I leverage a Product Engineering Manifesto approach, emphasizing quality and client collaboration.
 
 ---
 
-## 🧠 Technical Skill Set
+## Technical Skill Set
 
 ### Programming Languages
 
@@ -29,11 +29,11 @@ REST API Design & Development, Unit Testing (NUnit), CI/CD Pipelines, MS SQL Ser
 
 ---
 
-## 💼 Work Experience
+## Work Experience
 
 ### **Senior Software Engineer** — Nagarro, Sri Lanka
 
-📅 *Dec 2023 – Present*
+*Dec 2023 – Present*
 
 * Led the modernization of SPAs from legacy technologies (Knockout.js) to modern React.js frameworks, driving improved performance and maintainability.
 * Migrated legacy ASP.NET Core applications to microservices architecture on .NET 8+, focusing on scalability and resilience.
@@ -45,7 +45,7 @@ REST API Design & Development, Unit Testing (NUnit), CI/CD Pipelines, MS SQL Ser
 
 ### **Software Engineer** — Zone24x7, Sri Lanka
 
-📅 *Feb 2020 – Dec 2023*
+*Feb 2020 – Dec 2023*
 
 * Developed a custom ETL system using Hangfire and SignalR for real-time data feedback, demonstrating experience with scalable communication architectures.
 * Led the migration of an Angular application to the latest version, applying strong technical leadership and resolving compatibility issues.
@@ -56,7 +56,7 @@ REST API Design & Development, Unit Testing (NUnit), CI/CD Pipelines, MS SQL Ser
  
  ### **Freelance Software Engineer** — Self-employed
 
-📅 *Jan 2018 – Feb 2020*
+*Jan 2018 – Feb 2020*
 
 * Developed tools for 2D/3D content creation in Python and MEL, using advanced technologies.
 * Created After Effects plugins utilizing ActionScript, showcasing adaptability and diverse skills.
@@ -64,28 +64,28 @@ REST API Design & Development, Unit Testing (NUnit), CI/CD Pipelines, MS SQL Ser
 
 ---
 
-## 🎓 Education
+## Education
 
 ### Kingston University London – B.Sc (Hons) in Computer Science
 
-*Graduated with 2nd Class Honours*
+(*Graduated with 2nd Class Honours*)
 
 ### Sri Lanka Technological Campus – Software Engineering Bootcamp
 
-*SLASSCOM-backed 6-month intensive training on SWE, OOP, and React.js*
+(*SLASSCOM-backed 6-month intensive training on SWE, OOP, and React.js*)
 
 ### Colombo South International College – Edexcel A/Ls
 
-**Grades**: B in Mathematics, Physics, Chemistry
+(*Grades: BBB in Mathematics, Physics, Chemistry*)
 
 ---
 
-## 🔧 Personal Projects
+## Personal Projects
 
 ### [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter)
 
 A reusable ASP.NET Core middleware filter that short-circuits malicious requests using regex.
-🔗 [NuGet Package](https://www.nuget.org/packages/Zone24x7.PayloadInjectionFilter/)
+[NuGet Package](https://www.nuget.org/packages/Zone24x7.PayloadInjectionFilter/)
 
 ---
 
@@ -97,39 +97,29 @@ Used for: academic research, market analysis, visual knowledge exploration.
 
 ---
 
-## 📚 Continuous Education
+## Continuous Education
 
-* **Microsoft Certified: Azure Fundamentals (AZ-900)**
-  via Pearson — [Badge](https://www.credly.com/badges/d7185838-3573-4ab5-9d91-f07ceb0c5138)
+* Microsoft Certified: Azure Fundamentals (AZ-900) via Pearson — [Badge](https://www.credly.com/badges/d7185838-3573-4ab5-9d91-f07ceb0c5138)
 
-* **Linear Algebra for Machine Learning**
-  by DeepLearning.AI — [Certificate](https://coursera.org/verify/7L3ZXEUHVWWT)
+* Linear Algebra for Machine Learning by DeepLearning.AI — [Certificate](https://coursera.org/verify/7L3ZXEUHVWWT)
 
-* **Cryptography & Information Theory**
-  by University of Colorado — [Certificate](https://www.coursera.org/account/accomplishments/certificate/BF36UYWDTW8A)
+* Cryptography & Information Theory by University of Colorado — [Certificate](https://www.coursera.org/account/accomplishments/certificate/BF36UYWDTW8A)
 
-* **Introduction to CS using Python (6.00.1x)**
-  by MITx — [Certificate](https://courses.edx.org/certificates/5bec5895ee594edf9ff6043ec21e68ca)
+* Introduction to CS using Python (6.00.1x) by MITx — [Certificate](https://courses.edx.org/certificates/5bec5895ee594edf9ff6043ec21e68ca)
 
 ---
 
-## 👥 References
+## References
 
-**Azmeer Mohammed**
+**Azmeer Mohammed** —
 Head, Department of Multimedia (SLTC)
-📧 [azmeerm@gmail.com](mailto:azmeerm@gmail.com)
-📞 +94 77 734 8691
+[azmeerm@gmail.com](mailto:azmeerm@gmail.com) | +94 77 734 8691
 
----
-
-**Chathuranga Wijeratna**
+**Chathuranga Wijeratna** —
 Director of Technology (Nagarro)
-📧 [cwijeratna@yahoo.com](mailto:cwijeratna@yahoo.com)
+[cwijeratna@yahoo.com](mailto:cwijeratna@yahoo.com)
 
----
-
-**Chathuranganie Pathirage**
+**Chathuranganie Pathirage** —
 Associate Software Architect (Zone24x7)
-📧 [chathu03j@yahoo.com](mailto:chathu03j@yahoo.com)
-📞 +94 77 906 9494
+[chathu03j@yahoo.com](mailto:chathu03j@yahoo.com) | +94 77 906 9494
  </div>
