--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -1,5 +1,5 @@
 <div className='two-column-text'>
- ## About Me
+## About Me
 
 A highly experienced Full Stack Engineer with a strong foundation in React, .NET Core, and cloud technologies.  Proven ability to lead projects and teams, coupled with a commitment to building scalable and high-quality software solutions.  I leverage a Product Engineering Manifesto approach, emphasizing quality and client collaboration.
 
@@ -82,16 +82,12 @@ REST API Design & Development, Unit Testing (NUnit), CI/CD Pipelines, MS SQL Ser
 
 ## Personal Projects
 
-### [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter)
-
-A reusable ASP.NET Core middleware filter that short-circuits malicious requests using regex.
+- ### [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter)
+  + A reusable ASP.NET Core middleware filter that short-circuits malicious requests using regex.
 [NuGet Package](https://www.nuget.org/packages/Zone24x7.PayloadInjectionFilter/)
 
----
-
-### [LearnTree AI](https://learntree.ai)
-
-A closed-source generative AI app that builds interactive, human-readable knowledge graphs.
+- ### [LearnTree AI](https://learntree.ai)
+  + A closed-source generative AI app that builds interactive, human-readable knowledge graphs.
 Used for: academic research, market analysis, visual knowledge exploration.
 *Repository access available on request.*
 
