feat: implement resume generation with structured context and job description integration

--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -1,121 +1,110 @@
 <div className='two-column-text'>
-## About Me
 
-A highly experienced Full Stack Engineer with a strong foundation in React, .NET Core, and cloud technologies.  Proven ability to lead projects and teams, coupled with a commitment to building scalable and high-quality software solutions.  I leverage a Product Engineering Manifesto approach, emphasizing quality and client collaboration.
+## About
+
+Highly skilled Technical Lead bringing 6+ years of hands-on expertise in React, .NET Core, and Azure Cloud. Demonstrated success in leading high-performing teams, modernizing large-scale enterprise applications, and building robust CI/CD pipelines. Adept in product engineering, REST API design, and agile delivery environments. Recognized for strong client collaboration, enforcing coding standards, and ensuring top-tier project quality.
 
 ---
 
 ## Technical Skill Set
 
 ### Programming Languages
-
-C#, TypeScript, SQL, Python
+C#, TypeScript, JavaScript, SQL (T-SQL, P-SQL), Python, Java, C, C++
 
 ### Frontend Frameworks / Tools
+React, Angular, Next.js, Redux, Zustand, TailwindCSS, HTML5, CSS3
 
-React, Next.js, Redux, Zustand, TailwindCSS
+### Backend Frameworks & Technologies
+.NET Core, ASP.NET, Node.js, Express.js, Fast API, NestJS, Entity Framework, RESTful APIs, GraphQL, Microservices
 
-### Backend Frameworks / Tools
+### Cloud & DevOps
+Azure, AWS, Google Cloud Platform (GCP), Docker, Kubernetes, Terraform, Azure DevOps, Jenkins, GitHub Actions, CI/CD
 
-.NET Core, EFCore, Dapper, FastAPI
+### Databases
+MS SQL Server, PostgreSQL, MySQL, MongoDB, Redis, Neo4j
 
-### Cloud Platforms
+### Testing & Methodologies
+Unit Testing (NUnit, XUnit), Integration & E2E Testing, Test Driven Development (TDD), Behavior Driven Development (BDD), Postman
 
-Azure
-
-### Other Skills
-
-REST API Design & Development, Unit Testing (NUnit), CI/CD Pipelines, MS SQL Server
+### Agile Practices
+Agile Methodologies, Scrum, Kanban, Team Leadership, Code Reviews, Mentoring
 
 ---
 
 ## Work Experience
 
-### **Senior Software Engineer** — Nagarro, Sri Lanka
+### **Senior Engineer (Full Stack)** — Nagarro, Sri Lanka
 
 *Dec 2023 – Present*
 
-* Led the modernization of SPAs from legacy technologies (Knockout.js) to modern React.js frameworks, driving improved performance and maintainability.
-* Migrated legacy ASP.NET Core applications to microservices architecture on .NET 8+, focusing on scalability and resilience.
-* Provisioned Azure infrastructure using Terraform and implemented CI/CD pipelines with GitHub Actions + Azure DevOps, ensuring automated deployments.
-* Contributed to the development of WiX/MSI installers for desktop/server environments.
-* Actively participated in code reviews, documentation, and team knowledge sharing, promoting best practices.
+* Led a cross-functional team in modernizing monolithic SPAs to React.js and architecting .NET Core microservices, driving scalability and maintainability.
+* Delivered automated CI/CD pipelines on Azure using Terraform, GitHub Actions, and Azure DevOps, ensuring rapid and reliable deployments.
+* Fostered close client collaboration and knowledge sharing, enforcing coding best practices and team growth.
 
----
-
-### **Software Engineer** — Zone24x7, Sri Lanka
+### **Software Engineer (Full Stack)** — Zone24x7, Sri Lanka
 
 *Feb 2020 – Dec 2023*
 
-* Developed a custom ETL system using Hangfire and SignalR for real-time data feedback, demonstrating experience with scalable communication architectures.
-* Led the migration of an Angular application to the latest version, applying strong technical leadership and resolving compatibility issues.
-* Designed and implemented a Postman test suite, automating testing and significantly reducing QA hours.
-* Implemented a RabbitMQ-based communication system alongside an HTTP sync tool, showcasing experience with asynchronous messaging.
-* Utilized Webpack and Terser to optimize JavaScript assets, achieving a 50% size reduction – highlighting optimization skills.
-* Mentored junior developers and interns, fostering a collaborative and growth-oriented team environment.
- 
- ### **Freelance Software Engineer** — Self-employed
+* Spearheaded the migration and upgrade of Angular applications, coordinating requirements directly with clients and stakeholders.
+* Developed custom ETL and messaging systems, optimized JavaScript assets, and introduced efficient RESTful integration strategies.
+* Mentored junior engineers and facilitated Scrum-based delivery of high-quality, client-focused solutions.
+
+### **Freelance Software Engineer** — Self Employed, Sri Lanka
 
 *Jan 2018 – Feb 2020*
 
-* Developed tools for 2D/3D content creation in Python and MEL, using advanced technologies.
-* Created After Effects plugins utilizing ActionScript, showcasing adaptability and diverse skills.
-* Developed particle simulations for motion graphics, reflecting problem-solving skills and technical expertise.
+* Delivered bespoke web and desktop tools using Python, MEL, and .NET/C#, adapting rapidly to diverse technical environments.
+* Designed and implemented commercial Adobe After Effects plugins and assets, demonstrating strong client and project management skills.
+* Engineered motion graphics and simulation libraries, showcasing a deep commitment to code quality and technical innovation.
 
 ---
 
 ## Education
 
-### Kingston University London – B.Sc (Hons) in Computer Science
+### Kingston University, UK – B.Sc (Hons) in Computer Science
+(*Second Class Honours; Focus: Software Engineering & Web, 2020–2023*)
 
-(*Graduated with 2nd Class Honours*)
+### SLTC, Sri Lanka – Software Engineering Bootcamp Certification
+(*SLASSCOM-backed, intensive full-stack curriculum, 2019–2020*)
 
-### Sri Lanka Technological Campus – Software Engineering Bootcamp
-
-(*SLASSCOM-backed 6-month intensive training on SWE, OOP, and React.js*)
-
-### Colombo South International College – Edexcel A/Ls
-
-(*Grades: BBB in Mathematics, Physics, Chemistry*)
+### Colombo South International College, Sri Lanka – Secondary School Completion
+(*GCE London A/Ls: Maths, Chemistry, Physics*)
 
 ---
 
 ## Personal Projects
 
-- ### [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter)
-  + A reusable ASP.NET Core middleware filter that short-circuits malicious requests using regex.
-[NuGet Package](https://www.nuget.org/packages/Zone24x7.PayloadInjectionFilter/)
+- [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter) — ASP.NET Core middleware that short-circuits malicious requests using regex patterns.
 
-- ### [LearnTree AI](https://learntree.ai)
-  + A closed-source generative AI app that builds interactive, human-readable knowledge graphs.
-Used for: academic research, market analysis, visual knowledge exploration.
-*Repository access available on request.*
+- [LearnTree AI](https://learntree.ai) — Private generative AI web app for producing interactive, human-readable knowledge graphs.
 
 ---
 
 ## Continuous Education
 
-* Microsoft Certified: Azure Fundamentals (AZ-900) via Pearson — [Badge](https://www.credly.com/badges/d7185838-3573-4ab5-9d91-f07ceb0c5138)
-
-* Linear Algebra for Machine Learning by DeepLearning.AI — [Certificate](https://coursera.org/verify/7L3ZXEUHVWWT)
-
-* Cryptography & Information Theory by University of Colorado — [Certificate](https://www.coursera.org/account/accomplishments/certificate/BF36UYWDTW8A)
-
-* Introduction to CS using Python (6.00.1x) by MITx — [Certificate](https://courses.edx.org/certificates/5bec5895ee594edf9ff6043ec21e68ca)
+- **Microsoft Certified: Azure Fundamentals AZ-900** (Microsoft / Pearson) — Demonstrated proficiency in Azure cloud concepts and services.
+- **Mathematics for Machine Learning** (Deeplearning.ai / Coursera) — Completed advanced mathematics for data science specialization.
+- **Cryptography and Information Theory** (University of Colorado / Coursera) — Explored foundational cryptography and secure systems.
+- **6.00.1x: Introduction to Computer Science and Programming Using Python** (MITx / EdX) — Mastered core CS algorithms, data structures, and computational problem-solving with Python.
 
 ---
 
 ## References
 
-**Azmeer Mohammed** —
-Head, Department of Multimedia (SLTC)
-[azmeerm@gmail.com](mailto:azmeerm@gmail.com) | +94 77 734 8691
+- **Azmeer Mohammed**  
+  Head, Department of Multimedia (SLTC)  
+  azmeerm@gmail.com  
+  +94 77 734 8691
 
-**Chathuranga Wijeratna** —
-Director of Technology (Nagarro)
-[cwijeratna@yahoo.com](mailto:cwijeratna@yahoo.com)
+- **Chathuranga Wijeratna**  
+  Director of Technology (Nagarro)  
+  cwijeratna@yahoo.com
 
-**Chathuranganie Pathirage** —
-Associate Software Architect (Zone24x7)
-[chathu03j@yahoo.com](mailto:chathu03j@yahoo.com) | +94 77 906 9494
- </div>
+- **Chathuranganie Pathirage**  
+  Associate Software Architect (Zone24x7)  
+  chathu03j@yahoo.com  
+  +94 77 906 9494
+
+---
+
+</div>
