feat: refactor file paths to use __dirname and add JSON schemas for context and header

--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -2,32 +2,32 @@
 
 ## About
 
-Highly skilled Technical Lead bringing 6+ years of hands-on expertise in React, .NET Core, and Azure Cloud. Demonstrated success in leading high-performing teams, modernizing large-scale enterprise applications, and building robust CI/CD pipelines. Adept in product engineering, REST API design, and agile delivery environments. Recognized for strong client collaboration, enforcing coding standards, and ensuring top-tier project quality.
+Accomplished full-stack engineer with 6+ years of hands-on expertise in .NET Core, React, and cloud-based scalable architectures. Adept at leading development teams, driving modern best practices, and collaborating directly with clients to deliver high-quality software. Proven history in technical leadership, Agile delivery, CI/CD, and test-driven development. Passionate about continuous improvement, mentoring, and upholding industry standards to ensure client satisfaction.
 
 ---
 
 ## Technical Skill Set
 
 ### Programming Languages
-C#, TypeScript, JavaScript, SQL (T-SQL, P-SQL), Python, Java, C, C++
+C#, TypeScript, JavaScript, SQL (T-SQL/P-SQL), Python, Java, C, C++
 
 ### Frontend Frameworks / Tools
-React, Angular, Next.js, Redux, Zustand, TailwindCSS, HTML5, CSS3
+React, Angular, Redux, Next.js, Vue.js, HTML5, CSS3, TailwindCSS
 
 ### Backend Frameworks & Technologies
-.NET Core, ASP.NET, Node.js, Express.js, Fast API, NestJS, Entity Framework, RESTful APIs, GraphQL, Microservices
+.NET, .NET Core, ASP.NET Core, Entity Framework, Node.js, Express.js, FastAPI, NestJS
 
-### Cloud & DevOps
-Azure, AWS, Google Cloud Platform (GCP), Docker, Kubernetes, Terraform, Azure DevOps, Jenkins, GitHub Actions, CI/CD
+### Cloud & DevOps Platforms
+Azure, AWS, Google Cloud Platform (GCP), Docker, Kubernetes, Terraform, Azure DevOps, GitHub Actions, Jenkins
 
-### Databases
-MS SQL Server, PostgreSQL, MySQL, MongoDB, Redis, Neo4j
+### Databases & Data Technologies
+SQL Server, PostgreSQL, MySQL, MongoDB, Redis, Neo4j
 
-### Testing & Methodologies
-Unit Testing (NUnit, XUnit), Integration & E2E Testing, Test Driven Development (TDD), Behavior Driven Development (BDD), Postman
+### Testing & Quality Assurance
+NUnit, xUnit, Jest, Mocha, Unit Testing, Integration Testing, End-to-End Testing, Postman
 
-### Agile Practices
-Agile Methodologies, Scrum, Kanban, Team Leadership, Code Reviews, Mentoring
+### System Architecture & Practices
+Microservices, RESTful APIs, GraphQL, Identity Server, CI/CD, Agile/Scrum, Kanban, Test Driven Development (TDD), Behavior Driven Development (BDD)
 
 ---
 
@@ -37,55 +37,61 @@ Agile Methodologies, Scrum, Kanban, Team Leadership, Code Reviews, Mentoring
 
 *Dec 2023 – Present*
 
-* Led a cross-functional team in modernizing monolithic SPAs to React.js and architecting .NET Core microservices, driving scalability and maintainability.
-* Delivered automated CI/CD pipelines on Azure using Terraform, GitHub Actions, and Azure DevOps, ensuring rapid and reliable deployments.
-* Fostered close client collaboration and knowledge sharing, enforcing coding best practices and team growth.
+* Spearheaded team migration of legacy SPAs to React.js, enhancing maintainability and driving performance gains for client-facing applications.
+* Modernized monolithic .NET Core platforms into Azure-based microservices using .NET 8+, Docker, and CI/CD pipelines, ensuring scalability and rapid delivery.
+* Led technical knowledge sharing, enforced coding standards, and participated in Agile processes to foster a culture of engineering excellence.
 
 ### **Software Engineer (Full Stack)** — Zone24x7, Sri Lanka
 
 *Feb 2020 – Dec 2023*
 
-* Spearheaded the migration and upgrade of Angular applications, coordinating requirements directly with clients and stakeholders.
-* Developed custom ETL and messaging systems, optimized JavaScript assets, and introduced efficient RESTful integration strategies.
-* Mentored junior engineers and facilitated Scrum-based delivery of high-quality, client-focused solutions.
+* Led feature and version upgrades for enterprise-scale Angular and .NET solutions, resolving compatibility challenges and optimizing front-end and backend performance.
+* Established robust automated testing (including Postman and unit tests) and integrated RabbitMQ-based async communication to boost delivery quality and reliability.
+* Mentored cross-functional teams, facilitated Agile ceremonies, and streamlined development workflows via CI/CD adoption and code review best practices.
 
 ### **Freelance Software Engineer** — Self Employed, Sri Lanka
 
 *Jan 2018 – Feb 2020*
 
-* Delivered bespoke web and desktop tools using Python, MEL, and .NET/C#, adapting rapidly to diverse technical environments.
-* Designed and implemented commercial Adobe After Effects plugins and assets, demonstrating strong client and project management skills.
-* Engineered motion graphics and simulation libraries, showcasing a deep commitment to code quality and technical innovation.
+* Delivered custom development projects in Python and C#, focusing on 2D/3D content tooling and integration.
+* Engineered middleware and plugins for creative suites, showcasing adaptability to client requirements and diverse technology stacks.
+* Demonstrated strong communication skills by directly managing client relationships and delivering technical solutions on schedule.
 
 ---
 
 ## Education
 
 ### Kingston University, UK – B.Sc (Hons) in Computer Science
-(*Second Class Honours; Focus: Software Engineering & Web, 2020–2023*)
+(*Second Class Honours; specialization in software engineering and web development*)
 
 ### SLTC, Sri Lanka – Software Engineering Bootcamp Certification
-(*SLASSCOM-backed, intensive full-stack curriculum, 2019–2020*)
+(*SLASSCOM-backed bootcamp specializing in modern full-stack development*)
 
 ### Colombo South International College, Sri Lanka – Secondary School Completion
-(*GCE London A/Ls: Maths, Chemistry, Physics*)
+(*Achieved BBB in GCE London A/L in Maths, Chemistry, and Physics*)
 
 ---
 
 ## Personal Projects
 
-- [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter) — ASP.NET Core middleware that short-circuits malicious requests using regex patterns.
-
-- [LearnTree AI](https://learntree.ai) — Private generative AI web app for producing interactive, human-readable knowledge graphs.
+- [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter) — ASP.NET Core middleware that mitigates malicious payloads using advanced regex filtering.
+- [LearnTree AI](https://learntree.ai) — Proprietary generative AI app delivering interactive knowledge graphs for advanced learning and data visualization.
 
 ---
 
 ## Continuous Education
 
-- **Microsoft Certified: Azure Fundamentals AZ-900** (Microsoft / Pearson) — Demonstrated proficiency in Azure cloud concepts and services.
-- **Mathematics for Machine Learning** (Deeplearning.ai / Coursera) — Completed advanced mathematics for data science specialization.
-- **Cryptography and Information Theory** (University of Colorado / Coursera) — Explored foundational cryptography and secure systems.
-- **6.00.1x: Introduction to Computer Science and Programming Using Python** (MITx / EdX) — Mastered core CS algorithms, data structures, and computational problem-solving with Python.
+- **Microsoft Certified: Azure Fundamentals AZ-900** — Microsoft / Pearson  
+  *Validated foundation in Azure cloud concepts and services.*
+
+- **Mathematics for Machine Learning** — Deeplearning.ai / Coursera  
+  *Completed specialization in mathematical foundations for AI and data science.*
+
+- **Cryptography and Information Theory** — University of Colorado / Coursera  
+  *Studied core principles of cryptography and information theory.*
+
+- **6.00.1x: Introduction to Computer Science and Programming Using Python** — MITx / EdX  
+  *Explored algorithmic thinking, data structures, and software problem solving with Python.*
 
 ---
 
@@ -93,8 +99,7 @@ Agile Methodologies, Scrum, Kanban, Team Leadership, Code Reviews, Mentoring
 
 - **Azmeer Mohammed**  
   Head, Department of Multimedia (SLTC)  
-  azmeerm@gmail.com  
-  +94 77 734 8691
+  azmeerm@gmail.com | +94 77 734 8691
 
 - **Chathuranga Wijeratna**  
   Director of Technology (Nagarro)  
@@ -102,8 +107,7 @@ Agile Methodologies, Scrum, Kanban, Team Leadership, Code Reviews, Mentoring
 
 - **Chathuranganie Pathirage**  
   Associate Software Architect (Zone24x7)  
-  chathu03j@yahoo.com  
-  +94 77 906 9494
+  chathu03j@yahoo.com | +94 77 906 9494
 
 ---
 
