feat: refactor path imports and enhance resume content with headshot and updated skills

--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -2,96 +2,90 @@
 
 ## About
 
-Accomplished full-stack engineer with 6+ years of hands-on expertise in .NET Core, React, and cloud-based scalable architectures. Adept at leading development teams, driving modern best practices, and collaborating directly with clients to deliver high-quality software. Proven history in technical leadership, Agile delivery, CI/CD, and test-driven development. Passionate about continuous improvement, mentoring, and upholding industry standards to ensure client satisfaction.
+Experienced Technical Lead and senior full-stack engineer with 6+ years’ expertise in React, .NET Core, and Azure Cloud. Adept at leading high-performing teams, designing robust software architectures, and delivering scalable, client-focused solutions. Recognized for strong technical leadership, commitment to best practices, and passion for continuous improvement in Agile/Scrum environments.
 
 ---
 
 ## Technical Skill Set
 
 ### Programming Languages
-C#, TypeScript, JavaScript, SQL (T-SQL/P-SQL), Python, Java, C, C++
+C#, TypeScript, JavaScript, SQL (T-SQL, P-SQL), Python, Java, C, C++
 
 ### Frontend Frameworks / Tools
-React, Angular, Redux, Next.js, Vue.js, HTML5, CSS3, TailwindCSS
+React, Angular, Next.js, Redux, Vue.js, HTML5, CSS3, TailwindCSS, Webpack
 
-### Backend Frameworks & Technologies
-.NET, .NET Core, ASP.NET Core, Entity Framework, Node.js, Express.js, FastAPI, NestJS
+### Backend Frameworks / Tools
+.NET, .NET Core, ASP.NET, ASP.NET Core, Entity Framework, Node.js, NestJS, FastAPI, Express.js
 
-### Cloud & DevOps Platforms
-Azure, AWS, Google Cloud Platform (GCP), Docker, Kubernetes, Terraform, Azure DevOps, GitHub Actions, Jenkins
+### Cloud & DevOps
+Azure, AWS, Google Cloud Platform (GCP), Azure DevOps, Docker, Kubernetes, Terraform, Git, Jenkins, GitHub Actions, CI/CD pipelines
 
-### Databases & Data Technologies
+### Databases
 SQL Server, PostgreSQL, MySQL, MongoDB, Redis, Neo4j
 
-### Testing & Quality Assurance
-NUnit, xUnit, Jest, Mocha, Unit Testing, Integration Testing, End-to-End Testing, Postman
+### Testing & Quality
+NUnit, Test Driven Development (TDD), Behavior Driven Development (BDD), Unit Testing, Integration Testing, End-to-End Testing, Postman
 
-### System Architecture & Practices
-Microservices, RESTful APIs, GraphQL, Identity Server, CI/CD, Agile/Scrum, Kanban, Test Driven Development (TDD), Behavior Driven Development (BDD)
+### Architecture & Methodologies
+Microservices, RESTful APIs, GraphQL, Identity Server integration, Agile, Scrum, Kanban, Product Engineering, Team Leadership
 
 ---
 
 ## Work Experience
 
-### **Senior Engineer (Full Stack)** — Nagarro, Sri Lanka
+### **Senior Engineer (Full Stack, Lead)** — Nagarro, Sri Lanka
 
 *Dec 2023 – Present*
 
-* Spearheaded team migration of legacy SPAs to React.js, enhancing maintainability and driving performance gains for client-facing applications.
-* Modernized monolithic .NET Core platforms into Azure-based microservices using .NET 8+, Docker, and CI/CD pipelines, ensuring scalability and rapid delivery.
-* Led technical knowledge sharing, enforced coding standards, and participated in Agile processes to foster a culture of engineering excellence.
+* Led cross-functional teams migrating legacy ASP.NET Core apps to microservices using .NET 8+ and React, greatly enhancing scalability and maintainability.
+* Architected and implemented Azure infrastructure via Terraform and orchestrated CI/CD pipelines (GitHub Actions & Azure DevOps) for rapid, automated deployments.
+* Drove coding standards, code reviews, and Agile best practices, ensuring high-quality software delivery and fostering continuous team growth.
 
-### **Software Engineer (Full Stack)** — Zone24x7, Sri Lanka
+### **Software Engineer (Full Stack / Team Lead)** — Zone24x7, Sri Lanka
 
 *Feb 2020 – Dec 2023*
 
-* Led feature and version upgrades for enterprise-scale Angular and .NET solutions, resolving compatibility challenges and optimizing front-end and backend performance.
-* Established robust automated testing (including Postman and unit tests) and integrated RabbitMQ-based async communication to boost delivery quality and reliability.
-* Mentored cross-functional teams, facilitated Agile ceremonies, and streamlined development workflows via CI/CD adoption and code review best practices.
+* Spearheaded frontend modernization by upgrading Angular solutions and optimizing JavaScript bundles, resulting in significantly improved performance and reduced load times.
+* Designed and delivered a custom ETL/data sync system (RabbitMQ, Hangfire, SignalR), automating business-critical processes while enforcing robust QA via automated testing and CI.
+* Mentored and led junior engineers, promoting a collaborative Agile culture and contributing directly to team performance evaluations and growth.
 
 ### **Freelance Software Engineer** — Self Employed, Sri Lanka
 
 *Jan 2018 – Feb 2020*
 
-* Delivered custom development projects in Python and C#, focusing on 2D/3D content tooling and integration.
-* Engineered middleware and plugins for creative suites, showcasing adaptability to client requirements and diverse technology stacks.
-* Demonstrated strong communication skills by directly managing client relationships and delivering technical solutions on schedule.
+* Delivered bespoke 2D/3D content creation tools and After Effects plugins, demonstrating rapid adaptation to diverse client stacks and requirements.
+* Engineered complex integrations and particle simulations in Python and ActionScript, showcasing problem-solving and solution design skills.
+* Communicated directly with clients, ensuring on-time, high-quality delivery and full requirements alignment.
 
 ---
 
 ## Education
 
 ### Kingston University, UK – B.Sc (Hons) in Computer Science
-(*Second Class Honours; specialization in software engineering and web development*)
+(*Second Class Honours; specialization in software engineering and web, 2020–2023*)
 
 ### SLTC, Sri Lanka – Software Engineering Bootcamp Certification
-(*SLASSCOM-backed bootcamp specializing in modern full-stack development*)
+(*SLASSCOM-backed bootcamp; comprehensive coverage of modern full-stack practices, 2019–2020*)
 
 ### Colombo South International College, Sri Lanka – Secondary School Completion
-(*Achieved BBB in GCE London A/L in Maths, Chemistry, and Physics*)
+(*A/L: BBB in Maths, Chemistry, Physics; 1999–2011*)
 
 ---
 
 ## Personal Projects
 
-- [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter) — ASP.NET Core middleware that mitigates malicious payloads using advanced regex filtering.
-- [LearnTree AI](https://learntree.ai) — Proprietary generative AI app delivering interactive knowledge graphs for advanced learning and data visualization.
+- [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter) — Production-ready ASP.NET Core middleware for secure and efficient request filtering using regex.
+
+- [LearnTree AI](https://learntree.ai) — Proprietary generative AI platform for building interactive, human-readable knowledge graphs.
 
 ---
 
 ## Continuous Education
 
-- **Microsoft Certified: Azure Fundamentals AZ-900** — Microsoft / Pearson  
-  *Validated foundation in Azure cloud concepts and services.*
-
-- **Mathematics for Machine Learning** — Deeplearning.ai / Coursera  
-  *Completed specialization in mathematical foundations for AI and data science.*
-
-- **Cryptography and Information Theory** — University of Colorado / Coursera  
-  *Studied core principles of cryptography and information theory.*
-
-- **6.00.1x: Introduction to Computer Science and Programming Using Python** — MITx / EdX  
-  *Explored algorithmic thinking, data structures, and software problem solving with Python.*
+- Microsoft Certified: Azure Fundamentals AZ-900 (Microsoft / Pearson) — Foundation in Azure cloud concepts and services.
+- Mathematics for Machine Learning (Deeplearning.ai / Coursera) — Completed specialization for data-driven problem solving.
+- Cryptography and Information Theory (University of Colorado / Coursera) — Gained core understanding of security fundamentals.
+- 6.00.1x: Introduction to Computer Science and Programming Using Python (MITx / EdX) — Algorithms, data structures, and computational thinking.
 
 ---
 
